[package]
name = "macros"
version = "0.1.0"
edition = "2021"
description = "A library for typed storage read/write using serde_json"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
library = { path = "../library" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
wee_alloc = "0.4"
proc-macro2 = "1.0"