[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
library = { path = "../library" }
deadpool = "0.12.2"
deadpool-postgres = "0.14.1"
serde = "1.0.219"
serde_json = "1.0.140"
actix-web = "4"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
pqcrypto-dilithium = { version = "0.5.0", features = ["serde", "serialization"] }
pqcrypto-traits = "0.3.5"
wasmtime = "31.0.0"
once_cell = "1.21.1"
env_logger = "0.10.0"
blake3 = "1.7.0"
hex = "0.4.3"
anyhow = "1.0.97"
rand = "0.9.0"
futures = "0.3.31"
log = "0.4.27"
