[workspace]
members = ["brother"]          # add more crates here later
resolver = "2"                 # modern dependency resolver

[workspace.package]            # common metadata (optional)
authors    = ["Econia Labs <developers@econialabs.com>"]
license    = "Business Source License"
homepage   = "https://www.econialabs.com/"
repository = "https://github.com/econia-labs/econia"
edition    = "2021"
publish    = false