[workspace]
members = ["brother", "sister", "sister-contract"]          # add more crates here later
resolver = "2"                 # modern dependency resolver

[workspace.package]            # common metadata (optional)
authors    = ["Summoner <info@summoner.org>"]
license    = "Apache-2.0"
homepage   = "https://www.summoner.org/"
repository = "https://github.com/Summoner-Network/backend"
edition    = "2021"
publish    = false
