[package]
name = "brother"
version = "0.1.0"
build = "build.rs"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
tonic = "0.13.1"
tokio = { version = "1", features = ["full"] }
prost = "0.13.5"
prost-types = "0.13.5"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"          # <── for the service impl

[build-dependencies]
tonic-build = "0.13.1"