[package]
name = "sister-contract"
version = "0.1.0"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
wit-bindgen-rt = { version = "0.42.1", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:sister-contract"
target  = { path = "wit", world = "demo" }

