[package]
name = "sister"
version = "0.1.0"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow   = "1"                    # easy error handling
async-trait = "0.1"               # makes it painless to impl async traits
tokio    = { version = "1", features = ["rt-multi-thread", "macros"] }

# component runtime + on-the-fly bindings generator
wasmtime  = { version = "19", features = ["component-model", "async"] }

# OPTIONAL: if you prefer a code-gen step instead of the macro below
# wit-bindgen = { version = "0.42", default-features = false, features = ["cli"] }
